Added insert node and delete node methods.